--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -183,6 +183,8 @@ button:hover {
 .form-group {
   display: flex;
   align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .form-group label {
@@ -241,3 +243,17 @@ button:hover {
 .enlaces{
   color: #0056b3;
 }
+
+.form-group label {
+  flex: 1 20%; /* Ocupa el 30% del ancho */
+  margin-right: 10px; /* Añade un margen derecho para separar los elementos */
+}
+
+.form-group input[type="text"] {
+  flex: 1 40%; /* Ocupa el 40% del ancho */
+}
+
+.form-group button {
+  flex: 1 30%; /* Ocupa el 30% del ancho */
+}
+
